# mdymcp

./: .env.example  .gitignore  README.md  handoff-mdymcp-server-refresh.md  install.ps1  install.py  install.sh  pyproject.toml
scripts/: switch-to-server.sh
server/: README.md  mdymcp-refresh.service  mdymcp-refresh.timer  provision.sh  refresh_daemon.py
src/mdmcp/: auth.py  cli_install.py  gateway.py
src/mdymcp/: __init__.py  api_client.py  auth.py  cli_auth.py  cli_install.py  cli_server_setup.py  gateway.py  server.py  tools_calendar.py  tools_company.py  tools_group.py  tools_message.py  tools_passport.py  tools_post.py  tools_task.py  tools_user.py  tools_webchat.py
src/mdymcp/data/: SKILL.md
