[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdymcp"
version = "0.2.4"
description = "Unified MCP server for Mingdao — v1 collaboration API + HAP gateway (worksheets, records, apps)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Lei", email = "andy.lei@mingdao.com"},
]
keywords = ["mcp", "mingdao", "hap", "worksheet", "collaboration", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "certifi>=2024.2.2",
]

[project.urls]
Homepage = "https://github.com/andyleimc-source/mdymcp"
Repository = "https://github.com/andyleimc-source/mdymcp"
Issues = "https://github.com/andyleimc-source/mdymcp/issues"

[project.scripts]
mdymcp = "mdymcp.server:main"
mdymcp-auth = "mdymcp.cli_auth:main"
mdymcp-install = "mdymcp.cli_install:main"
mdymcp-uninstall = "mdymcp.cli_uninstall:main"

[tool.setuptools.packages.find]
where = ["src"]
